[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Miku AuahDark", email = "lumi.hotaru@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
]
description = "HonokaMiku/libhonoka implementation in Python"
name = "honkypy"
readme = "README.md"
requires-python = ">=3.10"
version = "0.2.1"

[project.urls]
"Bug Tracker" = "https://github.com/DarkEnergyProcessor/honkypy/issues"
"Homepage" = "https://github.com/DarkEnergyProcessor/honkypy"

[project.scripts]
honkypy = "honkypy.__main__:main"
